# crates/adapters/src/http/openapi.rs
@@ -21,6 +21,7 @@ use utoipa::OpenApi;
         crate::http::app::trades::trades,
         crate::http::app::trades::trade_detail,
         crate::http::app::activity::activity,
+        crate::http::app::orders::orders,
         crate::http::app::makers::makers,
         crate::http::app::makers::maker_dashboard,
         crate::http::app::makers::maker_inventory,
@@ -38,6 +39,8 @@ use utoipa::OpenApi;
         crate::http::state::AppConfig,
         crate::http::state::Features,
         crate::http::app::stats::Stats,
+        crate::http::app::orders::ObservedOrder,
+        crate::http::app::orders::ObservedOrders,
         solvent_core::asset::Asset,
         solvent_core::asset::Token,
         solvent_core::pool::CurveMix,
